syntax = "proto3";
package fastcampus.money.v1;
option go_package = "github.com/titikterang/hexagonal-fastcampus-pay/lib/protos/v1/money;money";

import "lib/protos/google/api/annotations.proto";
import "lib/protos/google/type/money.proto";
import "lib/protos/protoc-gen-openapiv2/options/annotations.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Fast Campus Pay (Money API Endpoint)";
    version: "1.0";
    contact: {
      name: "Fast Campus Payment";
      url: "https://github.com/titikterang";
      email: "azwar.nrst@gmail.com";
    };
  };

  schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
};

service MoneyService {
  rpc GetUserBalance(UserBalancePayload) returns (UserBalanceResponse) {
    option (google.api.http) = {
      get: "/v1/money/balance",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get User Balance";
      operation_id: "GetUserBalance";
      tags: "money";
      responses: {
        key: "200"
        value: {
          description: "OK";
        }
      };
    };
  }

  rpc GetUserBalancePrivate(UserBalancePayload) returns (UserBalancePrivateResponse) {
    option (google.api.http) = {
      get: "/v1/money/private/balance",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get User Balance Private API";
      operation_id: "GetUserBalancePrivate";
      tags: "money";
      responses: {
        key: "200"
        value: {
          description: "OK";
        }
      };
    };
  }
}

message UserBalancePayload {
  string account_number = 1;
}

message UserBalanceResponse {
  string account_number = 1;
  string balance = 2;
}

message UserBalancePrivateResponse {
  string account_number = 1;
  google.type.Money balance = 2;
}

